# tai

./: Cargo.toml  README.md
src/: chat.rs  chat_render.rs  config.rs  history.rs  main.rs  main2.rs  tools.rs
src/chat/: mod.rs
src/tools/: dir.rs  fetch.rs  file.rs  mod.rs  shell.rs
