[package]
name = "tai"
version = "0.1.0"
edition = "2021"

[dependencies]
# Errors
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Runtime
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
    "rt",
] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

llm = { version = "1.2", features = [
    "openai",
    "anthropic",
    "ollama",
    "google",
    "azure_openai",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }

# Directory handling
dirs = "6.0"
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"

# Text processing
regex = "1.10"

# Clipboard
arboard = "3.4"

# Terminal output
spinoff = "0.8"
syntect = "5"
once_cell = "1.19"
pulldown-cmark = { version = "0.13" }
nu-ansi-term = "0.50"
