[package]
name = "tai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
    "rt",
] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
llm = { version = "1.3.4", features = [
    "openai",
    "anthropic",
    "ollama",
    "google",
    "azure_openai",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
dirs = "6.0"
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"
regex = "1.10"
arboard = "3.4"
nu-ansi-term = "0.50"
terminal_size = "0.4"
bat = { version = "0.25", features = ["regex-fancy", "paging"] }
